SpiderData/csdn/Clean/02337.txt
用jupyter notebook写的代码及报错如下：

from sklearn.model_selection import train_test_split
cancer_data_train, cancer_data_test,\
cancer_target_train,cancer_target_test = \
train_test_split(cancer_data, cancer_target, \ 
                test_size=0.2, random_state = 42)
print('训练集数据形状：',cancer_data_train.shape)

报错：

File "<ipython-input-18-9153cd16cd75>", line 4
    train_test_split(cancer_data, cancer_target, \
                                                   
^
SyntaxError: unexpected character after line continuation character

原因是\后面有其他字符 比如空格或者注释#
 删掉空格之后就不报错了

